// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationsArea renders correctly with no notifications 1`] = `
<div class="notifications-container">
  <div class="notifications-container__header">
    <div class="notifications-container__header__left-area">
      <router-link to="/" class="notifications-container__header__back-link">
        <backarrowicon-stub></backarrowicon-stub>
      </router-link>
      <p class="notifications-container__header__text">Notifications</p>
    </div> <button name="Mark all notifications as read" class="notifications-container__header__button disabled">
      <p class="notifications-container__header__button__label">Mark all as read</p>
    </button>
  </div>
  <div class="notifications-container__empty-state"><img src="@/../static/images/notifications/EmptyStateLarge.png" alt="Empty state image" class="notifications-container__empty-state__image">
    <p class="notifications-container__empty-state__label">No notifications yet</p>
  </div>
  <!---->
</div>
`;

exports[`NotificationsArea renders correctly with notifications 1`] = `
<div class="notifications-container">
  <div class="notifications-container__header">
    <div class="notifications-container__header__left-area">
      <router-link to="/" class="notifications-container__header__back-link">
        <backarrowicon-stub></backarrowicon-stub>
      </router-link>
      <p class="notifications-container__header__text">Notifications</p>
    </div> <button name="Mark all notifications as read" class="notifications-container__header__button">
      <p class="notifications-container__header__button__label">Mark all as read</p>
    </button>
  </div>
  <div class="notifications-container__content-area">
    <snonotification-stub notification="[object Object]" class="notification"></snonotification-stub>
  </div>
  <!---->
</div>
`;
